--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -99,3 +99,14 @@ form.create-note button {
   cursor: pointer;
   outline: none;
 }
+
+/* Parent container */
+.container {
+  display: flex;
+  justify-content: center; /* Horizontally centers the child element */
+  align-items: center; /* Vertically centers the child element */
+}
+
+.loading-icon {
+  margin-top: 20px;
+}
